<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/step_description_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/step_description_name"
    android:textColor="@color/colorAccent"
    android:text="@string/description_name"
    android:textSize="25sp"
    />


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/step_description"
    android:layout_below="@id/step_description_name"
    android:layout_margin="20dp"
    android:textColor="@color/colorDark"
    tools:text="myDescription"
    android:textSize="25sp"

    />
</RelativeLayout>
</ScrollView>
