...

    </RelativeLayout>
</android.support.v7.widget.CardView>
<android.support.v7.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recipe_steps_rv"
    android:layout_gravity="center_horizontal"
    android:layout_below="@id/ingredients_cardview"

     />

</RelativeLayout>
